# Avenix

./: API.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.kiro/specs/agentforge-v0-1-tracing/: .config.kiro  design.md  requirements.md  tasks.md
avenix/: __init__.py  decorator.py  extractors.py  formatter.py  logger.py  models.py  tracer.py
examples/: anthropic_example.py  manual_trace.py  openai_example.py
tests/: __init__.py  conftest.py  test_decorator.py  test_extractors.py  test_formatter.py  test_imports.py  test_integration.py  test_logger.py  test_models.py  test_tracer.py
